<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvProjectName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/student_stash"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDashboardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dashboard"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/tvProjectName"
        app:layout_constraintStart_toStartOf="@+id/tvProjectName" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="1"
        android:padding="50dp"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDashboardTitle">

        <!-- CardView for Expenses -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewExpenses"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_rowWeight="2"
            android:layout_columnWeight="2"
            android:layout_margin="8dp"
            android:clickable="true"
            android:contentDescription="@string/expenses_card_description"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_expense" /> <!-- Replace with your expense icon -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Expenses"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total this month: $540.45"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>



            </LinearLayout>
            <!-- Contents of CardViewExpenses -->

        </androidx.cardview.widget.CardView>

        <!-- CardView for Income -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIncome"
            android:layout_width="0dp"
            android:layout_height="139dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:contentDescription="@string/income_card_description"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_income" /> <!-- Replace with your income icon -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Income"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total this month: $2100"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewUserProfile"
            android:layout_width="0dp"
            android:layout_height="139dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewIncome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User Profile"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="80dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="48dp"
        android:onClick="onLogoutClicked"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add_income"
        android:contentDescription="@string/add_income"
        app:fabSize="normal"
        app:tint="@color/white"
        app:backgroundTint="@color/navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- FAB for adding expenses -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="76dp"
        android:src="@drawable/ic_add_expense"
        android:contentDescription="@string/add_expense"
        app:fabSize="normal"
        app:tint="@color/white"
        app:backgroundTint="@color/maroon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>